--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,8 +64,19 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/bakery.png
+    - assets/beverages.png
+    - assets/cheese.png
+    - assets/fruits.png
+    - assets/meat.png
+    - assets/fish.png
+    - assets/seafood.png
+    - assets/sushi.png
+    - assets/vegetables.png
+    - assets/eggs.png
+    - assets/dairy.png
+    - assets/grains.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
