--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/eggs.png
     - assets/dairy.png
     - assets/grains.png
+    - assets/nuts.png
     - assets/shopping-cart.png
     - assets/star.png
   #   - images/a_dot_ham.jpeg
