--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ flutter:
     # Illustrations 
     - assets/illustrations/EmptyCart.png
     - assets/illustrations/Nothing.png
+    - assets/illustrations/Building.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
