--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,8 @@ flutter:
     - assets/illustrations/EmptyCart.png
     - assets/illustrations/Nothing.png
     - assets/illustrations/Building.png
+    # Default image
+    - assets/default_image.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
