--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,11 @@ dependencies:
   cubit: ^0.1.2
 
 dev_dependencies:
+  flutter_native_splash: ^1.3.2 #splash screen
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.9.2" 
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -66,6 +69,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/icon.png
     - assets/bakery.png
     - assets/beverages.png
     - assets/cheese.png
