--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,4 +68,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:28.4.2')
     implementation platform('com.google.firebase:firebase-firestore')
+    implementation platform('com.google.firebase:firebase-auth')
 }
