--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  firebase_auth: 
   firebase_core: ^1.7.0
   cloud_firestore: ^2.5.3
   firebase_core_web: 
   cloud_firestore_web: 
+  provider: 
   flutter:
     sdk: flutter
 
